--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Purple hear rain </title>
-    <link rel="stylesheet" href="style.css">
+    <title>Emoji Rain Template</title>
+    <link rel="stylesheet" href="emoji-rain.css">
 
 </head>
 <body>
     
-    <script src="script.js"></script>
+    <script src="emoji-rain.js"></script>
 </body>
 </html>
